--- a/app/src/main/res/layout/item_one.xml
+++ b/app/src/main/res/layout/item_one.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="350dp"
+
     app:cs_corner_overlay="false"
     app:cs_clip="20dp"
     app:cs_corner="20dp"
-    app:cs_shadow_size="15dp">
+    app:cs_shadow_color="#440000ff"
+    app:cs_shadow_size="20dp">
 
     <ImageView
         android:id="@+id/iv_cover"
