--- a/app/src/main/res/layout/item_two.xml
+++ b/app/src/main/res/layout/item_two.xml
@@ -2,29 +2,20 @@
 <com.eericxu.cslibrary.CSLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="260dp"
+    android:layout_height="175dp"
+
+    app:cs_corner_overlay="false"
     app:cs_clip="20dp"
-    app:cs_corner="15dp"
-    app:cs_shadow_size="15dp">
+    app:cs_corner="20dp"
+    app:cs_shadow_color="#440000ff"
+    app:cs_shadow_size="20dp">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_cover"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@mipmap/img_2" />
+        android:src="@mipmap/img_4" />
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="38dp"
-        android:layout_marginTop="0dp"
-        android:text="标题"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
 </com.eericxu.cslibrary.CSLayout>
