动画逻辑 重构 更容易扩展 和 灵活性更好 删除一些api

--- a/app/src/main/res/layout/aty_cs.xml
+++ b/app/src/main/res/layout/aty_cs.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/tv_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="3sp"
