--- a/app/src/main/res/layout/aty_cs.xml
+++ b/app/src/main/res/layout/aty_cs.xml
@@ -5,64 +5,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    app:cs_corner_overlay="false"
-    >
+    app:cs_corner_overlay="false">
 
-    <ImageView
-        android:id="@+id/iv_cover"
-        android:layout_width="0dp"
-        android:layout_height="240dp"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/img_2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:lineSpacingExtra="3sp"
+                android:padding="20dp"
+                android:text=""
+                android:textColor="@color/colorBlack"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_cover" />
 
-    <TextView
-        android:id="@+id/tv_content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:lineSpacingExtra="3sp"
-        android:padding="20dp"
-        android:text="以敦煌为圆心的东北东
-这民族 的海岸线像一支弓
-那长城 像五千年来待射的梦
-我用手臂拉开这整个土地的重
-蒙古高原南下的风写些什么内容
-汉字到底懂不懂 一样肤色和面孔
-跨越黄河 东 登上泰山顶峰
-我向西 引北风 晒成一身古铜
-渴望着血脉相通
-无限个千万弟兄
-我把天地拆封将长江水掏空
-人在古老河床蜕变中
-我 右拳打开了天 化身为龙
-把 山河重新移动 填平裂缝
-将 东方 的日出调整了时空
-回到洪荒 去支配 去操纵
-我 右拳打开了天 化身为龙
-那 大地心脏汹涌 不安跳动
-全 世界 的表情只剩下一种
-等待英雄 我就是那条龙
-我 右拳打开了天 化身为龙
-把 山河重新移动 填平裂缝
-将 东方 的日出调整了时空
-回到洪荒 去支配 去操纵
-我 右拳打开了天 化身为龙
-那 大地心脏汹涌 不安跳动
-全 世界 的表情只剩下一种
-等待英雄 我就是那条龙
-化身为龙
-填平裂缝
-调整了时空
-去支配 去操纵
-化身为龙
-不安跳动
-只剩下一种
-等待英雄
-我就是那条龙"
-        android:textColor="@color/colorBlack"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_cover" />
+            <ImageView
+                android:id="@+id/iv_cover"
+                android:layout_width="0dp"
+                android:layout_height="240dp"
+                android:scaleType="centerCrop"
+                app:layout_optimizationLevel="barrier"
+                android:src="@mipmap/img_2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="30dp"
+                android:text="拉克酒店"
+                android:textColor="@color/colorWhite"
+                android:textSize="26sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
 </com.eericxu.cslibrary.CSLayout>
