--- a/app/src/main/res/layout/item_two.xml
+++ b/app/src/main/res/layout/item_two.xml
@@ -17,5 +17,14 @@
         android:scaleType="centerCrop"
         android:src="@mipmap/img_4" />
 
-
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="35dp"
+        android:text="拉克酒店"
+        android:textColor="@color/colorWhite"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </com.eericxu.cslibrary.CSLayout>
