--- a/app/src/main/res/layout/aty_cs.xml
+++ b/app/src/main/res/layout/aty_cs.xml
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
-                android:text="拉克酒店"
+                android:text="CSLayout 共享动画"
                 android:textColor="@color/colorWhite"
                 android:textSize="26sp"
                 app:layout_constraintLeft_toLeftOf="parent"
