--- a/app/src/main/res/layout/item_one.xml
+++ b/app/src/main/res/layout/item_one.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="40dp"
-        android:text="拉克酒店"
+        android:text="CSLayout 共享动画"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
