--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/mList"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:paddingTop="20dp" />
+        android:padding="10dp" />
 
 </android.support.constraint.ConstraintLayout>
