--- a/app/src/main/res/layout/aty_cs.xml
+++ b/app/src/main/res/layout/aty_cs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
     <com.eericxu.cslibrary.CSLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/csLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,7 +34,8 @@
                     android:src="@mipmap/img_2"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="ContentDescription" />
 
                 <TextView
                     android:id="@+id/tv_title"
@@ -45,7 +47,9 @@
                     android:textColor="@color/colorWhite"
                     android:textSize="26sp"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginStart="10dp"
+                    tools:ignore="HardcodedText" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
