--- a/app/src/main/res/layout/item_two.xml
+++ b/app/src/main/res/layout/item_two.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.eericxu.cslibrary.CSLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="175dp"
     app:cs_clip="10dp"
@@ -13,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@mipmap/img_4" />
+        android:src="@mipmap/img_4"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -24,5 +26,6 @@
         android:textColor="@color/colorWhite"
         android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="HardcodedText" />
 </com.eericxu.cslibrary.CSLayout>
